[gd_scene load_steps=27 format=2]

[ext_resource path="res://Assets/Buildings/city.png" type="Texture" id=1]
[ext_resource path="res://Assets/Character Sprites/character.png" type="Texture" id=2]
[ext_resource path="res://Assets/static/car1.png" type="Texture" id=3]
[ext_resource path="res://Assets/static/car2.png" type="Texture" id=4]
[ext_resource path="res://Scene/Start-Cutscene.gd" type="Script" id=5]
[ext_resource path="res://Assets/PixelRPG.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Character Sprites/playerAvatar.png" type="Texture" id=7]
[ext_resource path="res://Scene/Convo.gd" type="Script" id=8]
[ext_resource path="res://Assets/Shadows/light.png" type="Texture" id=9]
[ext_resource path="res://Assets/static/ambulance.png" type="Texture" id=10]
[ext_resource path="res://Assets/static/truck1.png" type="Texture" id=11]
[ext_resource path="res://Scene/Ambulance.gd" type="Script" id=12]
[ext_resource path="res://Assets/Music and Sounds/sirena_ambulanza.mp3" type="AudioStream" id=13]

[sub_resource type="Animation" id=1]
resource_name = "cameraOut"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.3, 1.3 ), Vector2( 1.6, 1.6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/fade:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 4, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 132.035, 100.786 ), Vector2( 102.774, 101.73 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Camera2D:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 7.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_level_change"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "cameraRoll"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 149.504, -127.376 ), Vector2( 132.035, 100.786 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "animation"
tracks/2/path = NodePath("AnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": PoolStringArray( "carMove" ),
"times": PoolRealArray( 4 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/DialogBox:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/fade:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Camera2D:zoom")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.3, 1.3 ) ]
}

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("car1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -112.794, 76.0859 ), Vector2( 409.128, 72.7488 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("car1:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_car_pass"
} ]
}

[sub_resource type="Animation" id=4]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("car2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 405.791, 123.473 ), Vector2( -203.563, 124.14 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("car2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "fadeIn"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "fadeOut"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "playerdown"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1.5, -2.5 ), Vector2( 2.46851, 59.0118 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "animation"
tracks/2/path = NodePath("PlayerMove")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": PoolStringArray( "playerMove" ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "method"
tracks/3/path = NodePath("CanvasLayer/DialogBox/Convo")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_move_finish"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "truck-kun"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Truck-kun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -623.214, 86.6268 ), Vector2( -44.2799, 69.6178 ), Vector2( 23.5477, 71.2746 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Truck-kun:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Truck-kun/Light2D2:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.8, 0.6, 0.8, 0.6 ]
}
tracks/3/type = "animation"
tracks/3/path = NodePath("PlayerMove")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": PoolStringArray( "playerfall" ),
"times": PoolRealArray( 0.8 )
}

[sub_resource type="Animation" id=9]
resource_name = "playerMove"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Player/character:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 131, 132, 133, 134, 135, 136, 137, 138 ]
}

[sub_resource type="Animation" id=10]
resource_name = "playerfall"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2.46851, 59.0118 ), Vector2( 58.655, 57.888 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Player/character:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 131, 263, 264, 265 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("CanvasLayer/DialogBox/Convo")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_fade_out"
} ]
}

[sub_resource type="CapsuleShape2D" id=11]

[sub_resource type="OccluderPolygon2D" id=12]
polygon = PoolVector2Array( 78.6457, 26.4801, 77.4538, 28.8639, 77.1336, 31.0619, 89.2403, 31.7774, 89.1079, 27.672, 86.5916, 25.9503, 83.016, 25.9503 )

[sub_resource type="DynamicFont" id=13]
size = 6
font_data = ExtResource( 6 )

[node name="Start-Cutscene" type="Node2D"]
script = ExtResource( 5 )
next_scene = "res://Scene/level.tscn"

[node name="city" type="Sprite" parent="."]
position = Vector2( 101.842, 9.54916 )
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 149.504, -127.376 )
current = true
zoom = Vector2( 1.3, 1.3 )

[node name="Camera" type="AnimationPlayer" parent="."]
autoplay = "cameraRoll"
anims/cameraOut = SubResource( 1 )
anims/cameraRoll = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/carMove = SubResource( 3 )
anims/carMove1 = SubResource( 4 )
anims/fadeIn = SubResource( 5 )
anims/fadeOut = SubResource( 6 )
anims/playerdown = SubResource( 7 )
anims/truck-kun = SubResource( 8 )

[node name="PlayerMove" type="AnimationPlayer" parent="."]
anims/playerMove = SubResource( 9 )
anims/playerfall = SubResource( 10 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( -1.5, -2.5 )

[node name="character" type="Sprite" parent="Player"]
position = Vector2( 83.7848, 14.4891 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )
hframes = 13
vframes = 21
frame = 138

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 83.5418, 19.6219 )
shape = SubResource( 11 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Player"]
occluder = SubResource( 12 )

[node name="car1" type="Sprite" parent="."]
position = Vector2( 409.128, 72.7488 )
texture = ExtResource( 3 )

[node name="Light2D" type="Light2D" parent="car1"]
position = Vector2( 80.7261, 10.301 )
scale = Vector2( 0.609115, 0.630465 )
texture = ExtResource( 9 )
texture_scale = 0.5
energy = 0.6

[node name="car2" type="Sprite" parent="."]
position = Vector2( 405.791, 123.473 )
texture = ExtResource( 4 )
flip_h = true

[node name="Light2D2" type="Light2D" parent="car2"]
position = Vector2( -84.6647, 4.53638 )
scale = Vector2( 0.609115, 0.630465 )
texture = ExtResource( 9 )
texture_scale = 0.5
energy = 0.6

[node name="Truck-kun" type="Sprite" parent="."]
position = Vector2( -623.214, 86.6268 )
texture = ExtResource( 11 )

[node name="Light2D2" type="Light2D" parent="Truck-kun"]
position = Vector2( 102.36, 6.6822 )
scale = Vector2( 0.609115, 0.630465 )
texture = ExtResource( 9 )
texture_scale = 0.5
energy = 0.6

[node name="Ambulance" type="Sprite" parent="."]
position = Vector2( 202.292, 124.815 )
texture = ExtResource( 10 )
flip_h = true
script = ExtResource( 12 )

[node name="Light2D" type="Light2D" parent="Ambulance"]
position = Vector2( -4.02697, -29.3174 )
texture = ExtResource( 9 )
texture_scale = 0.4
color = Color( 1, 0, 0, 1 )

[node name="Light2D2" type="Light2D" parent="Ambulance"]
position = Vector2( -1.9657, -2.30033 )
texture = ExtResource( 9 )
texture_scale = 0.4
color = Color( 0, 0.0156863, 1, 1 )

[node name="Timer" type="Timer" parent="Ambulance"]
wait_time = 0.5
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Ambulance"]
stream = ExtResource( 13 )

[node name="Timer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="fade" type="ColorRect" parent="CanvasLayer"]
margin_right = 321.0
margin_bottom = 183.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBox" type="ColorRect" parent="CanvasLayer"]
visible = false
margin_left = 13.0
margin_top = 140.0
margin_right = 299.0
margin_bottom = 177.0
color = Color( 0, 0, 0, 0.262745 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Convo" type="RichTextLabel" parent="CanvasLayer/DialogBox"]
margin_left = 4.0
margin_top = 6.0
margin_right = 238.0
margin_bottom = 31.0
custom_fonts/normal_font = SubResource( 13 )
bbcode_text = "this is test"
text = "this is test"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer#1" type="Timer" parent="CanvasLayer/DialogBox/Convo"]
one_shot = true

[node name="Avatar" type="TextureRect" parent="CanvasLayer/DialogBox"]
margin_left = 247.0
margin_right = 287.0
margin_bottom = 36.0
texture = ExtResource( 7 )
expand = true

[node name="textTimer" type="Timer" parent="CanvasLayer/DialogBox"]
wait_time = 0.05
autostart = true

[node name="Lights" type="Node2D" parent="."]

[node name="Light2D" type="Light2D" parent="Lights"]
position = Vector2( 50.0874, 12.1525 )
texture = ExtResource( 9 )
texture_scale = 0.6
energy = 0.7
shadow_enabled = true

[node name="Light2D2" type="Light2D" parent="Lights"]
position = Vector2( 267.62, -66.0423 )
texture = ExtResource( 9 )
texture_scale = 0.6
energy = 0.7

[node name="Light2D3" type="Light2D" parent="Lights"]
position = Vector2( 36.0837, 179.406 )
texture = ExtResource( 9 )
texture_scale = 0.6
energy = 0.7

[node name="Light2D4" type="Light2D" parent="Lights"]
position = Vector2( -113.52, 183.691 )
texture = ExtResource( 9 )
texture_scale = 0.6
energy = 0.7

[node name="Light2D5" type="Light2D" parent="Lights"]
position = Vector2( -120.061, 33.2565 )
texture = ExtResource( 9 )
texture_scale = 0.6
energy = 0.7

[node name="Light2D6" type="Light2D" parent="Lights"]
position = Vector2( 94.5908, -126.097 )
texture = ExtResource( 9 )
texture_scale = 0.6
energy = 0.7

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.266667, 0.266667, 0.266667, 1 )

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Ambulance/Timer" to="Ambulance" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="CanvasLayer/DialogBox/Convo/Timer#1" to="CanvasLayer/DialogBox/Convo" method="_on_Timer1_timeout"]
[connection signal="timeout" from="CanvasLayer/DialogBox/textTimer" to="CanvasLayer/DialogBox/Convo" method="_on_textTimer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
